gccida/c0/AT_string_form
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/AT_string_form/src/dwarf2out.c:5004:48: error: use of undeclared identifier 'const_labelno'
sprintf( label, "*.%s%u", "LC", ( unsigned int)const_labelno); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/AT_string_form/src/dwarf2out.c:5005:3: error: use of undeclared identifier 'const_labelno'
++const_labelno; 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/AT_string_form/src/obj/dwarf2out.o] Error 1
